Added Progress Bar

--- a/index.html
+++ b/index.html
@@ -26,7 +26,17 @@
 			</div>
 			<div class="storage">
 				<p>You’ve used 815 GB of your storage</p>
-				<div class="storage-bar"></div>
+				<div class="container">
+					<div class="storage-bar">
+						<div class="progress">
+							<div class="circle"></div>
+						</div>
+					</div>
+					<div class="text">
+						<p>0 GB</p>
+						<p>1000 GB</p>
+					</div>
+				</div>
 				<div class="storage-left">
 					<b>185</b>
 					<p>GB LEFT</p>
